--- a/src/index.css
+++ b/src/index.css
@@ -195,7 +195,7 @@ p {
 
 .btn {
   text-transform: uppercase;
-  background: var(--clr-primary-5);
+  background: rgb(58, 54, 54);
   color: var(--clr-primary-10);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
@@ -211,7 +211,7 @@ p {
 
 .btn:hover {
   color: var(--clr-primary-1);
-  background: var(--clr-primary-7);
+  background: white;
 }
 
 .title {
