--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ Variables
   --radius: 0.25rem;
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  --max-width: 1170px;
+  --max-width: 1200px;
   --fixed-width: 620px;
 }
 
@@ -197,7 +197,8 @@ p {
   text-transform: uppercase;
   background: rgb(58, 54, 54);
   color: var(--clr-primary-10);
-  padding: 0.375rem 0.75rem;
+  padding: 0.575rem 0.75rem;
+  margin-top: 1rem;
   letter-spacing: var(--spacing);
   display: inline-block;
   font-weight: 400;
